--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -8,15 +8,14 @@
       <th colspan="3"></th>
     </tr>
   </thead>
-
   <tbody>
     <% @books.each do |book| %>
       <tr>
         <td><%= book.title %></td>
         <td><%= book.body %></td>
-        <td><%= link_to 'Show', book, class: "show_#{book.id}" %></td>
-        <td><%= link_to 'Edit', edit_book_path, class: "edit_#{book.id}" %></td>
-        <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' }, class: "destroy_#{book.id}" %></td>
+        <td><%= link_to 'Show', book_path(book.id), class: "show_#{book.id}" %></td>
+        <td><%= link_to 'Edit', edit_book_path(book.id), class: "edit_#{book.id}" %></td>
+        <td><%= link_to 'Destroy', book_path(book.id), method: :delete, data: { confirm: 'Are you sure?' }, class: "destroy_#{book.id}" %></td>
       </tr>
     <% end %>
   </tbody>
@@ -24,4 +23,4 @@
 
 
 <h2>New book</h2>
-<%= render 'form' %>
+<%= render 'form', book: @book %>
